# c2i2o

./: LICENSE  README.md  RELEASING.md  pyproject.toml
examples/: c2i_compute_advanced.yaml  c2i_compute_full.yaml  c2i_compute_simple.yaml  cosmo_full.yaml  cosmo_precise.yaml  cosmo_simple.yaml
sonnet/: charge.md  contents.md  design.md  design.yaml  design_notes.md  log.md
src/c2i2o/: __init__.py  c2i_calculator.py  c2i_emulator.py  c2i_train_emulator.py
src/c2i2o/cli/: __init__.py  c2i.py  cosmo.py  main.py  option.py
src/c2i2o/core/: c2i_emulator.py  computation.py  cosmology.py  distribution.py  emulator.py  grid.py  intermediate.py  multi_distribution.py  parameter_space.py  scipy_distributions.py  tensor.py  tracer.py  util_functions.py
src/c2i2o/interfaces/: __init__.py
src/c2i2o/interfaces/ccl/: __init__.py  computation.py  cosmology.py  intermediate_calculator.py  tracer.py
src/c2i2o/interfaces/tensor/: tf_emulator.py  tf_tensor.py
tests/: conftest.py  test_c2i_calculator.py  test_c2i_emulator.py  test_c2i_train_emulator.py  test_import.py
tests/cli/: test_c2i.py  test_cosmo.py
tests/core/: test_computation.py  test_cosmology.py  test_grid.py  test_intermediate.py  test_multi_distribution.py  test_scipy_distributions.py  test_tensor.py  test_tracer.py
tests/interfaces/ccl/: test_computation.py  test_cosmology.py  test_intermediate_calculator.py
tests/interfaces/tensor/: __init__.py  conftest.py  test_tf_emulator.py  test_tf_tensor.py
