[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2i2o"
version = "0.2.0-dev"
description = "Cosmology to Intermediates to Observables: Emulation and Inference for Cosmological Analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Eric Charles", email = "echarles@slac.stanford.edu"}
]
maintainers = [
    {name = "Eric Charles", email = "echarles@slac.stanford.edu"}
]
keywords = [
    "cosmology",
    "inference",
    "emulation",
    "astrophysics",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Deep learning emulators
pytorch = [
    "torch",
]
tensorflow = [
    "tensorflow",
    "tensorflow-probability[tf]",
    "types-tensorflow",
]
ccl = [
    "pyccl>=3.0.0",
]

# Cosmology libraries
astropy = [
    "astropy>=5.3.0",
]

# Database support
db = [
    "sqlalchemy>=2.0.0",
]

# All optional dependencies
all = [
    "c2i2o[pytorch,tensorflow,ccl,astropy,db]",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]


# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/KIPAC/c2i2o"
Documentation = "https://c2i2o.readthedocs.io"
Repository = "https://github.com/KIPAC/c2i2o"
"Bug Tracker" = "https://github.com/KIPAC/c2i2o/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 110
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 110
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "scipy.*",
    "pyccl.*",
    "pysr.*",
    "torch.*",
    "tensorflow_probability.*",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "abstract-method",
    "too-many-statements",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "use-dict-literal",
    "broad-exception-caught",
]
load-plugins = "pylint_pydantic"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
class-naming-style = "PascalCase"
attr-naming-style = "snake_case"

max-line-length = 110
max-locals = 50
max-branches = 25
max-public-methods = 50

[tool.pylint.MASTER]
ignore-paths = [
    "src/c2i2o/_version.py",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=c2i2o",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/scripts/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
