[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2i2o"
version = "0.2.0-dev"
description = "Cosmology to Intermediates to Observables: Emulation and Inference for Cosmological Analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Eric Charles", email = "echarles@slac.stanford.edu"}
]
maintainers = [
    {name = "Eric Charles", email = "echarles@slac.stanford.edu"}
]
keywords = [
    "cosmology",
    "inference",
    "emulation",
    "astrophysics",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "click>=8.0",
    "pyyaml>=6.0.0",
    "tables_io>=1.0",
]



[project.optional-dependencies]
# Deep learning emulators
pytorch = [
    "torch",
]
tensorflow = [
    "tensorflow",
    "tensorflow-probability[tf]",
    "types-tensorflow",
]
ccl = [
    "pyccl>=3.0.0",
    "camb",
]

# Cosmology libraries
astropy = [
    "astropy>=5.3.0",
]

# Database support
db = [
    "sqlalchemy>=2.0.0",
]

# All optional dependencies
all = [
    "c2i2o[pytorch,tensorflow,ccl,astropy,db]",
]

dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    
    # Type checking
    "mypy>=1.0",
    "types-PyYAML",

    # pylint
    "pylint",
    "pylint-pydantic",
    
    # Linting and formatting
    "ruff>=0.1.0",
    "black>=23.0",
    
    # Documentation
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=2.0",
]


# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

# Add this section for the CLI entry point
[project.scripts]
c2i2o = "c2i2o.cli:cli"

[project.urls]
Homepage = "https://github.com/KIPAC/c2i2o"
Documentation = "https://c2i2o.readthedocs.io"
Repository = "https://github.com/KIPAC/c2i2o"
"Bug Tracker" = "https://github.com/KIPAC/c2i2o/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 110
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 110
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "scipy.*",
    "pyccl.*",
    "pysr.*",
    "tables_io.*",
    "torch.*",
    "tensorflow_probability.*",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "abstract-method",
    "too-many-statements",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "use-dict-literal",
    "broad-exception-caught",
    "unspecified-encoding",
    "too-many-lines",
]
load-plugins = "pylint_pydantic"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
class-naming-style = "PascalCase"
attr-naming-style = "snake_case"

max-line-length = 110
max-locals = 50
max-branches = 25
max-public-methods = 50

[tool.pylint.MASTER]
ignore-paths = [
    "src/c2i2o/_version.py",
]


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=c2i2o",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_scipy: marks tests that require scipy",
    "requires_data: marks tests that require external data files",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.run]
source = ["src/c2i2o"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "class .*\\bProtocol\\):",
    "class .*\\bProtocol\\[.*\\]\\):",
    "^\\s*\\.\\.\\.$",
    "^\\s*pass\\s*$",
    "_AVAILABLE",
    "ImportError",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]



